Moved all platform-specific code from `malwerks_render` to `malwerks_playground` and improved headless device support
Moved platform-specific `BackbufferPass` from `malwerks_render` to `malwerks_playground` and renamed it to `SurfacePass`
Removed platform-specific dependencies from `malwerks_render`
Moved `KHR_surface` code from `malwerks_vk` and moved it to `SurfaceWinit` in `malwerks_playground`
Moved swapchain handling code from `malwerks_vk` to 'SurfaceWinit` in `'malwerks_playground`

--- a/malwerks_playground/Cargo.toml
+++ b/malwerks_playground/Cargo.toml
@@ -6,7 +6,9 @@ edition = "2018"
 default-run = "malwerks_playground"
 
 [dependencies]
+malwerks_vk = { path = "../malwerks_vk" }
 malwerks_render = { path = "../malwerks_render" }
+ash = "*"
 log = "*"
 pretty_env_logger = "*"
 winit = "*"
@@ -16,3 +18,11 @@ gilrs = "*"
 [build-dependencies]
 depgraph = "*"
 shaderc = "*"
+
+[target.'cfg(windows)'.dependencies]
+winapi = "*"
+
+[target.'cfg(target_os = "macos")'.dependencies]
+metal-rs = "*"
+cocoa = "*"
+objc = "*"
