Improved .dds file handling
Moved all dds processing from different tools to the new `malwerks_dds` crate
Implemented a convenient `ScratchImage` struct for common dds operations

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,8 @@
 [workspace]
 members = [
+    "malwerks_dds",
     "malwerks_vk",
+    "malwerks_resources",
     "malwerks_render",
     "malwerks_tools",
     "malwerks_playground",
