--- a/malwerks_tools/Cargo.toml
+++ b/malwerks_tools/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Kyrylo Bazhenov <bazhenovc@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+malwerks_dds = { path = "../malwerks_dds" }
 malwerks_resources = { path = "../malwerks_resources" }
 serde = "*"
 ash = "*"
