Implemented render testing system
`malwerks_dds`: Fixed size calculation in `ScratchImage::as_typed_slice()`
`malwerks_playground`: Reordered parameters in `ImguiContext::new()` to match the rest of the codebase
`malwerks_render`: Fixed a typo in `Camera::update_matrices()`
`malwerks_render`: Moved `internal.rs` to `upload_batch.rs` and made `UploadBatch` public
`malwerks_render`: Implemented render pass testing code: it will load a test world, render it from different angels and compare results to the reference images
`malwerks_tools`: Panic on failed texture convert
`malwerks_vk`: Panic on Vulkan validation error

--- a/malwerks_render/Cargo.toml
+++ b/malwerks_render/Cargo.toml
@@ -5,6 +5,7 @@ authors = ["Kyrylo Bazhenov <bazhenovc@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+malwerks_dds = { path = "../malwerks_dds" }
 malwerks_vk = { path = "../malwerks_vk" }
 malwerks_resources = { path = "../malwerks_resources" }
 log = "*"
@@ -12,6 +13,10 @@ serde = { version = "*", features = ["derive"] }
 bincode = "*"
 ultraviolet = "*"
 rayon = "*"
+
+[dev-dependencies]
+ash = "*"
+pretty_env_logger = "*"
 
 [dependencies.microprofile]
 version = "0.2.1"
