More RTX ray tracing code
`malwerks_light_baker`: Added a placeholder tool to bake lightmaps and environment probes with RTX. Currently performs all ray tracing pipeline setup, but actual ray tracing shaders are placeholders.
`malwerks_vk`: Added `DeviceOptions` to the device to make it possible for other subsystems to query various device features.
`malwerks_resources`: Added ray tracing shader modules. Refactored `RenderWorld` code a bit.
`malwerks_shaders`: Renamed "sky_box" to "environment_probe"
`malwerks_tools`: `import_gltf` now compiles and bundles ray tracing shaders.

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,12 @@
+.vs
 .vscode
+.idea
+.nsight
 /target
 /assets
 Session.vim
+*.sublime-project
+*.sublime-workspace
 
 # allow specific directories
 !/assets/screenshots/**
