--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,6 @@ members = [
     "malwerks_resources",
     "malwerks_render",
     "malwerks_tools",
+    "malwerks_light_baker",
     "malwerks_playground",
 ]
