--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,12 @@
 [workspace]
 members = [
-    "malwerks_dds",
     "malwerks_vk",
     "malwerks_resources",
     "malwerks_render",
     "malwerks_tools",
     "malwerks_light_baker",
     "malwerks_playground",
+
+    "malwerks_dds",
+    "malwerks_ply"
 ]
