RLE compression for ply structured elements
`malwerks_ply`: Implemented RLE element header compression

--- a/malwerks_ply/Cargo.toml
+++ b/malwerks_ply/Cargo.toml
@@ -8,3 +8,4 @@ edition = "2018"
 bytemuck = "*"
 seek_bufread = "*" # TODO: remove this once "bufreader_seek_relative" is available
 log = "*"
+rle_vec = "*"
