Dependencies overhaul, resource compression
`malwerks_dds`: Replaced `serde`+`bincode` with bytemuck, this makes more sense for this particular library
`malwerks_light_baker`: Removed `bincode` dependency
`malwerks_playground`: Removed `bincode` dependency
`malwerks_render`: Removed `bincode` dependency and rely on `DiskStaticScenery::deserialize_from` instead
`malwerks_resources`: Made `serde` and `bincode` dependencies internal, added compression support for buffers and textures
`malwerks_tools`: Removed `bincode` dependency and rely on `DiskStaticScenery::deserialize_from` instead, improved command line option handling

--- a/malwerks_dds/Cargo.toml
+++ b/malwerks_dds/Cargo.toml
@@ -5,5 +5,4 @@ authors = ["Kyrylo Bazhenov <bazhenovc@gmail.com>"]
 edition = "2018"
 
 [dependencies]
-serde = { version = "*", features = ["derive"] }
-bincode = "*"
+bytemuck = "*"
