Tools refactor and mesh optimization support
`malwerks_tools`: Split `import_gltf` into multiple files, added `meshoptimizer` library and tweaked `gltf` crate feautres to improve build times
`malwerks_vk`: Added uint8 indexing extension, disabled at the moment because only 20% of GPUs currently support it

--- a/malwerks_tools/Cargo.toml
+++ b/malwerks_tools/Cargo.toml
@@ -13,7 +13,6 @@ ash = "*"
 log = "*"
 pretty_env_logger = "*"
 logging_timer = "*"
-gltf = "*"
 shaderc = "*"
 ultraviolet = "*"
 rayon = "*"
@@ -21,6 +20,12 @@ indicatif = "*"
 image = "*"
 clap = "*"
 bytemuck = "*"
+meshopt = "*"
+
+[dependencies.gltf]
+version = "*"
+default-features = false
+features = ["names"]
 
 [[bin]]
 name = "import_gltf"
