Replaced `microprofile` with `puffin` and implemented GPU profiling support, updated dependencies
`malwerks_playground`: Added code to handle `puffin` logic and profiler window, added `puffin` instrumentation
`malwerks_render` Added GPU profiler code, added timestamp queries to all render passes, added timestamping logic to `RenderWorld` added `puffin` instrumentation where it makes sense
`malwerks_vk`: Updated code formatting, fixed function signature of `DeviceFactory::get_query_pool_results()` to be able to gracefully fail on `vk::Result::NOT_READY` error

--- a/malwerks_playground/Cargo.toml
+++ b/malwerks_playground/Cargo.toml
@@ -16,6 +16,8 @@ pretty_env_logger = "*"
 winit = "*"
 imgui = "*"
 gilrs = "*"
+puffin = "*"
+puffin-imgui = "*"
 
 [build-dependencies]
 depgraph = "*"
