--- a/malwerks_playground/Cargo.toml
+++ b/malwerks_playground/Cargo.toml
@@ -3,6 +3,8 @@ name = "malwerks_playground"
 version = "0.1.0"
 authors = ["Kyrylo Bazhenov <bazhenovc@gmail.com>"]
 edition = "2018"
+license = "MPL-2.0"
+
 default-run = "malwerks_playground"
 
 [dependencies]
