--- a/malwerks_tools/Cargo.toml
+++ b/malwerks_tools/Cargo.toml
@@ -3,6 +3,7 @@ name = "malwerks_tools"
 version = "0.1.0"
 authors = ["Kyrylo Bazhenov <bazhenovc@gmail.com>"]
 edition = "2018"
+license = "MPL-2.0"
 
 [dependencies]
 malwerks_dds = { path = "../malwerks_dds" }
