--- a/malwerks_vk/Cargo.toml
+++ b/malwerks_vk/Cargo.toml
@@ -3,6 +3,7 @@ name = "malwerks_vk"
 version = "0.1.0"
 authors = ["Kyrylo Bazhenov <bazhenovc@gmail.com>"]
 edition = "2018"
+license = "MPL-2.0"
 
 [dependencies]
 ash = "*"
