Tools refactoring pass
`malwerks_gltf`: Separated gltf handling into a separate crate
`malwerks_external`: Separated some dependencies into a separate crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,7 @@ members = [
     "malwerks_playground",
 
     "malwerks_dds",
-    "malwerks_ply"
+    "malwerks_ply",
+    "malwerks_gltf",
+    "malwerks_external"
 ]
