--- a/malwerks_external/Cargo.toml
+++ b/malwerks_external/Cargo.toml
@@ -1,18 +1,15 @@
 [package]
-name = "malwerks_render"
+name = "malwerks_external"
 version = "0.1.0"
 authors = ["Kyrylo Bazhenov <bazhenovc@gmail.com>"]
 edition = "2018"
 license = "MPL-2.0"
 
 [dependencies]
-malwerks_vk = { path = "../malwerks_vk" }
 malwerks_resources = { path = "../malwerks_resources" }
-log = "*"
-ultraviolet = "*"
-puffin = "*"
-
-[dev-dependencies]
 malwerks_dds = { path = "../malwerks_dds" }
+
 ash = "*"
-pretty_env_logger = "*"
+log = "*"
+meshopt = "*"
+bytemuck = "*"
