--- a/malwerks_playground/Cargo.toml
+++ b/malwerks_playground/Cargo.toml
@@ -15,7 +15,8 @@ ash = "*"
 log = "*"
 pretty_env_logger = "*"
 winit = "*"
-imgui = "*"
+#imgui = "*"
+imgui = "0.4"
 gilrs = "*"
 puffin = "*"
 puffin-imgui = "*"
