Large refactor, render bundles implemented
`malwerks_external`: Cleaned up mesh optimization and texconv code, added temporary directories to store intermediate files
`malwerks_gltf`: Render bundles implemented, import code refactored
`malwerks_playground`: Render bundles, moved application-specific code from other libraries here
`malwerks_render`: Render bundles implemented, removed all application-specific code
`malwerks_resources`: Render bundles
`malwerks_shaders`: Minor shader refactor, renamed `pbr_material` to `gltf_pbr_material`
`malwerks_tools`: `import_gltf` tool now imports render bundles

--- a/malwerks_playground/Cargo.toml
+++ b/malwerks_playground/Cargo.toml
@@ -9,7 +9,12 @@ default-run = "malwerks_playground"
 
 [dependencies]
 malwerks_vk = { path = "../malwerks_vk" }
+malwerks_resources = { path = "../malwerks_resources" }
 malwerks_render = { path = "../malwerks_render" }
+malwerks_gltf = { path = "../malwerks_gltf" }
+
+# TODO: Decouple malwerks_external
+malwerks_external = { path = "../malwerks_external" }
 
 ash = "*"
 log = "*"
@@ -21,10 +26,12 @@ gilrs = "*"
 puffin = "*"
 puffin-imgui = "*"
 structopt = "*"
+ultraviolet = "*"
 
-[build-dependencies]
-depgraph = "*"
+# TODO: Decouple serde, bincode and shaderc dependencies
+serde = { version = "*", features = ["derive"] }
 shaderc = "*"
+bincode = "*"
 
 [target.'cfg(windows)'.dependencies]
 winapi = "*"
