Refactor pass - renamed some crates
`malwerks_resources`: Renamed to `malwerks_bundles`
`malwerks_render`: Renamed to `malwerks_core`

--- a/malwerks_bundles/Cargo.toml
+++ b/malwerks_bundles/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "malwerks_resources"
+name = "malwerks_bundles"
 version = "0.1.0"
 authors = ["Kyrylo Bazhenov <bazhenovc@gmail.com>"]
 edition = "2018"
