--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
+
 [workspace]
 members = [
     "malwerks_vk",
-    "malwerks_resources",
-    "malwerks_render",
+    "malwerks_core",
+    "malwerks_bundles",
     "malwerks_tools",
     "malwerks_playground",
 
