--- a/malwerks_core/Cargo.toml
+++ b/malwerks_core/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "malwerks_render"
+name = "malwerks_core"
 version = "0.1.0"
 authors = ["Kyrylo Bazhenov <bazhenovc@gmail.com>"]
 edition = "2018"
@@ -7,7 +7,7 @@ license = "MPL-2.0"
 
 [dependencies]
 malwerks_vk = { path = "../malwerks_vk" }
-malwerks_resources = { path = "../malwerks_resources" }
+malwerks_bundles = { path = "../malwerks_bundles" }
 log = "*"
 puffin = "*"
 
