--- a/malwerks_external/Cargo.toml
+++ b/malwerks_external/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2018"
 license = "MPL-2.0"
 
 [dependencies]
-malwerks_resources = { path = "../malwerks_resources" }
+malwerks_bundles = { path = "../malwerks_bundles" }
 malwerks_dds = { path = "../malwerks_dds" }
 
 ash = "*"
