--- a/malwerks_gltf/Cargo.toml
+++ b/malwerks_gltf/Cargo.toml
@@ -8,7 +8,7 @@ license = "MPL-2.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-malwerks_resources = { path = "../malwerks_resources" }
+malwerks_bundles = { path = "../malwerks_bundles" }
 malwerks_external = { path = "../malwerks_external" }
 
 log = "*"
