--- a/malwerks_playground/Cargo.toml
+++ b/malwerks_playground/Cargo.toml
@@ -9,8 +9,8 @@ default-run = "malwerks_playground"
 
 [dependencies]
 malwerks_vk = { path = "../malwerks_vk" }
-malwerks_resources = { path = "../malwerks_resources" }
-malwerks_render = { path = "../malwerks_render" }
+malwerks_bundles = { path = "../malwerks_bundles" }
+malwerks_core = { path = "../malwerks_core" }
 malwerks_gltf = { path = "../malwerks_gltf" }
 
 # TODO: Decouple malwerks_external
