Another big refactor
`malwerks_playground`: Moved most rendering code to `malwerks_render`
`malwerks_render`: Brought back, fixed rendering tests, cleaned up a lot of code

--- a/malwerks_playground/Cargo.toml
+++ b/malwerks_playground/Cargo.toml
@@ -11,6 +11,7 @@ default-run = "malwerks_playground"
 malwerks_vk = { path = "../malwerks_vk" }
 malwerks_bundles = { path = "../malwerks_bundles" }
 malwerks_core = { path = "../malwerks_core" }
+malwerks_render = { path = "../malwerks_render" }
 malwerks_gltf = { path = "../malwerks_gltf" }
 
 # TODO: Decouple malwerks_external
