--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ members = [
     "malwerks_vk",
     "malwerks_core",
     "malwerks_bundles",
+    "malwerks_render",
     "malwerks_tools",
     "malwerks_playground",
 
