--- a/malwerks_playground/Cargo.toml
+++ b/malwerks_playground/Cargo.toml
@@ -21,8 +21,7 @@ ash = "*"
 log = "*"
 pretty_env_logger = "*"
 winit = "*"
-#imgui = "*"
-imgui = "0.4"
+imgui = "*"
 gilrs = "*"
 puffin = "*"
 puffin-imgui = "*"
