Anti aliasing implemented
`malwerks_render`: Implemented a fairly regular temporal anti aliasing, refactored some internals
`malwerks_playground`: Added more test bundle options

--- a/malwerks_tools/Cargo.toml
+++ b/malwerks_tools/Cargo.toml
@@ -44,3 +44,7 @@ path = "src/convert_metallic_roughness.rs"
 [[bin]]
 name = "import_ply"
 path = "src/import_ply.rs"
+
+[[bin]]
+name = "halton_sequence"
+path = "src/halton_sequence.rs"
